--- a/AOC.cabal
+++ b/AOC.cabal
@@ -14,7 +14,13 @@ cabal-version:       >=1.10
 extra-source-files:  README.md
 
 executable Day1
-  hs-source-dirs:      src/Day1
+  hs-source-dirs:      src
   main-is:             Day1.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+
+executable Day2
+  hs-source-dirs:      src
+  main-is:             Day2.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
