--- a/AOC.cabal
+++ b/AOC.cabal
@@ -13,8 +13,8 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
-executable AOC
-  hs-source-dirs:      src
-  main-is:             Main.hs
+executable Day1
+  hs-source-dirs:      src/Day1
+  main-is:             Day1.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
