--- a/AOC.cabal
+++ b/AOC.cabal
@@ -23,5 +23,6 @@ executable Day2
   hs-source-dirs:      src
   main-is:             Day2.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5,
-                       split
+  build-depends:       base >= 4.7 && < 5
+                     , split
+                     , array
