--- a/AOC.cabal
+++ b/AOC.cabal
@@ -26,3 +26,9 @@ executable Day2
   build-depends:       base >= 4.7 && < 5
                      , split
                      , array
+
+executable Day3
+  hs-source-dirs:      src
+  main-is:             Day3.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
