--- a/AOC.cabal
+++ b/AOC.cabal
@@ -23,4 +23,5 @@ executable Day2
   hs-source-dirs:      src
   main-is:             Day2.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5,
+                       split
