--- a/AOC.cabal
+++ b/AOC.cabal
@@ -32,3 +32,5 @@ executable Day3
   main-is:             Day3.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , split
+                     , utility-ht
