--- a/AOC.cabal
+++ b/AOC.cabal
@@ -34,3 +34,11 @@ executable Day3
   build-depends:       base >= 4.7 && < 5
                      , split
                      , utility-ht
+
+executable Day4
+  hs-source-dirs:      src
+  main-is:             Day4.hs
+  default-language:    Haskell2010
+  build-depends:       base >= 4.7 && < 5
+                     , split
+                     , digits
